--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: Madetheartist;
+  src: url(assets/fonts/madetheartistscript/Madetheartistscript.ttf) format("opentype");
+}
+.margin-top {
+  margin-top: 6rem;
+}
+
+body {
+  background: url(/assets/img/bg1.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.card-product {
+  width: 200px;
+}
+
+.img-card {
+  display: block;
+  padding: 20px;
+  width: 100%;
+  max-height: 250px;
+}
+
+.card-img {
+  max-height: 250px;
+
+}
+
+.title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
