--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,19 @@
-<p>profile works!</p>
+<div class="margin-top">
+  <p-tabView>
+    <p-tabPanel [cache]="isTabCaching" header="Авторизация">
+      <ng-template pTemplate="content">
+        <app-authorization></app-authorization>
+      </ng-template>
+    </p-tabPanel>
+    <p-tabPanel header="Регистрация">
+      <app-registration></app-registration>
+
+    </p-tabPanel>
+
+
+  </p-tabView>
+
+</div>
+
+
+<p-toast position="top-left"></p-toast>
