--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,8 +1,9 @@
-<div class="d-flex flex-wrap justify-content-around ">
+<ng-container *ngIf="hideCart; else cart">
+  <div class="d-flex flex-wrap justify-content-around ">
 
     <div class="card-product  card m-4  p-2">
       <div class="card-img d-flex align-items-center bg-white rounded-5">
-        <img [src]="product.image"
+        <img src="http://localhost:3000/public/{{product.image}}"
         [alt]="product.title"
         class="mb-2 rounded img-card">
       </div>
@@ -22,7 +23,6 @@
 
       <div *ngIf="details">
           <p> {{ product.description }}</p>
-          <p>Rate: {{ product.rating.rate }}</p>
       </div>
 
       <div class="text-danger p-1 rounded text-">Цена: <span class="m-0">{{ product.price }} руб. </span></div>
@@ -52,7 +52,67 @@
 
     </div>
   </div>
+</ng-container>
+
+<ng-template #cart>
+  <div class="d-flex flex-column">
+
+    <div class="card p-3 mb-2 d-flex flex-row align-items-center">
+
+      <div class="d-flex align-items-center cart-img">
+        <img src="http://localhost:3000/public/{{product.image}}"
+        [alt]="product.title"
+        class="mb-2 rounded img-card">
+      </div>
+
+      <div class="d-flex flex-column w-75">
+
+        <h3 class="w-100 fs-6 card-title">{{ product.title }}</h3>
+
+        <div>
+          <button
+          class=" py-2 px-4 rounded  btn border-0"
+          [ngClass]="{
+            'btn-outline-dark': !details,
+            'bg-success-subtle': details
+          }"
+          (click)="details = !details"
+          >
+
+            {{ details ? 'Скрыть' : 'Показать' }} детали
+          </button>
+
+          <div *ngIf="details">
+            <p> {{ product.description }}</p>
+          </div>
+
+        </div>
+      </div>
+      <div class="d-flex">
+        <button [disabled]="count === 1" type="button" class="" (click)="countProduct(false)">-</button>
+        <input class="input-count"
+               type="number"
+               min="1"
+               [value]="count"
+               [(ngModel)]='count'
+               (change)="countChange()"
+               >
+        <button type="button" class="btn-outline-dark" (click)="countProduct(true)">+</button>
+      </div>
 
 
+      <div class="text-danger m-5 rounded text-">
+        <p>Цена: <span class="m-0">{{ product.forAllPrice }} руб.</span></p>
+      </div>
+
+      <button type="button"
+              class="btn-close position-absolute top-10 end-5"
+              aria-label="Закрыть"
+              (click)="removeToCart(product)"
+              ></button>
+    </div>
+
+  </div>
+</ng-template>
   <!--  -->
   <!-- "details = !details" -->
