--- a/src/app/components/card-product/card-product.component.scss
+++ b/src/app/components/card-product/card-product.component.scss
@@ -19,3 +19,12 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.input-count {
+  width: 30px;
+}
+
+.btn-close {
+  top: 10px;
+  right: 5px;
+}
