--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,8 +1,12 @@
 <div class="container">
   <nav class="navbar bg-dark fixed-top pb-0  px-4" data-bs-theme="dark" style="--bs-bg-opacity: .9">
     <div class="container-fluid">
-      <div class="decor-logo">
+      <div>
         <a routerLink="/" class="logo-style nav-link link-opacity-50-hover text-white fs-1 " aria-current="page">Тишина . . .</a>
+      </div>
+
+      <div *ngIf="user">
+        <p class="text-white logo-style fs-1 mt-1 mb-0" >Привет {{user.login}}!</p>
       </div>
 
       <ul class="align-middle nav">
@@ -19,9 +23,13 @@
           <path d="M8 2.748v11.047c3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
         </svg></a></li>
 
-        <li class="nav-item"><a routerLink="/profile" class="nav-link icon-link icon-link-hover text-white fs-3" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+        <li class="nav-item">
+          <a routerLink="/profile" class="nav-link icon-link icon-link-hover text-white fs-3" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
           <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
-        </svg></a></li>
+          </svg>
+        </a>
+        </li>
 
       </ul>
     </div>
