--- a/src/app/pages/cart-page/cart-page.component.html
+++ b/src/app/pages/cart-page/cart-page.component.html
@@ -8,48 +8,12 @@
     <div class="mt-5">
       <div *ngIf="!cart.length; else cartFull">Корзина пуста...</div>
       <ng-template #cartFull>
-        <div class="d-flex flex-column">
-
-          <div class="card p-3 mb-2 d-flex flex-row align-items-center "
-            *ngFor="let item of cart">
-
-            <div class="d-flex align-items-center cart-img">
-              <img [src]="item.image"
-              [alt]="item.title"
-              class="mb-2 rounded img-card">
-            </div>
-
-            <div class="d-flex flex-column w-75">
-              <h3 class="w-100 fs-6 card-title">{{ item.title }}</h3>
-              <div>
-                <button
-                class=" py-2 px-4 rounded  btn border-0"
-                [ngClass]="{
-                  'btn-outline-dark': !details,
-                  'bg-success-subtle': details
-                }"
-                (click)="details = !details"
-                >
-
-                  {{ details ? 'Скрыть' : 'Показать' }} детали
-                </button>
-
-                <div *ngIf="details">
-                  <p> {{ item.description }}</p>
-                  <p>Rate: {{ item.rating.rate }}</p>
-                </div>
-              </div>
-
-            </div>
-
-            <div class="text-danger m-5 rounded text-">
-              <p>Цена: <span class="m-0">{{ item.price }} руб.</span></p>
-            </div>
-
-          </div>
-
-        </div>
+        <app-card-product *ngFor="let product of cart" (sumUpdate)="sumUpdate()" [product]="product" [hideCart]="false"></app-card-product>
       </ng-template>
+
+      <div>Итого: {{sumOfProducts}} руб.</div>
+
+      <button class="btn btn-outline-secondar">Оформить заказ</button>
     </div>
   </div>
 </div>
