--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -24,11 +24,22 @@
         </svg></a></li>
 
         <li class="nav-item">
-          <a routerLink="/profile" class="nav-link icon-link icon-link-hover text-white fs-3" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-          <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
-          </svg>
-        </a>
+
+          <div class="dropdown">
+
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
+              </svg>
+            </button>
+
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" routerLink="/profile">Авторизоваться/Зарегистрироваться</a></li>
+              <li><a class="dropdown-item" href="#" (click)="logout()">Выйти</a></li>
+            </ul>
+
+          </div>
+
         </li>
 
       </ul>
@@ -39,3 +50,7 @@
 
 
 <!-- class="p-2 absolute top-0 end-0 start-0 d-flex justify-content-between text-white bg-secondary" -->
+
+                <!-- <a routerLink="/profile" class="nav-link icon-link icon-link-hover text-white fs-3" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);">
+
+                </a> -->
