--- a/src/app/pages/cart-page/cart-page.component.html
+++ b/src/app/pages/cart-page/cart-page.component.html
@@ -1,7 +1,7 @@
 <div class="margin-top container">
-  <div class="">
-    <div class="">
-      <p>Корзина <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
+  <div class="fs-3">
+    <div class="d-flex">
+      <p class="">Корзина <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5Zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0ZM14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1ZM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
       </svg></p>
     </div>
@@ -9,13 +9,15 @@
       <div *ngIf="!cart.length; else cartFull">Корзина пуста...</div>
       <ng-template #cartFull>
         <app-card-product *ngFor="let product of cart" (sumUpdate)="sumUpdate()" [product]="product" [hideCart]="false"></app-card-product>
-        <div>Итого: {{sumOfProducts}} руб.</div>
+        <div class="fs-3 d-flex p-2 justify-content-end">Итого: {{sumOfProducts}} руб.</div>
 
-
-        <!-- Кнопка-триггер модального окна -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          Оформить заказ
-        </button>
+<!-- Кнопка-триггер модального окна -->
+        <div class="d-grid gap-2 col-6 mx-auto">
+          <div *ngIf="!authService.userValue">Для оформления заказа необходимо авторизоваться.</div>
+          <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal" [disabled]="!authService.userValue">
+            Оформить заказ
+          </button>
+         </div>
       </ng-template>
 
 
