--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -1,6 +1,5 @@
 
   <div class="container text-center pt-5 mt-5">
-
     <input type="text"
     class="mb-2 border py-2 px-4 w-100"
     placeholder="Поиск товаров..."
@@ -15,7 +14,9 @@
     <div class="body-style" *ngIf="products$ | async as products">
 
         <app-card-product
-        *ngFor="let product of products$ | async filterProducts: term; let i = index"
+
+
+        *ngFor="let product of products | filterProducts: term; let i = index"
         [product]="product"
         >
       </app-card-product>
@@ -23,7 +24,5 @@
 
 
     </div>
-
-
   </div>
 
