--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -6,7 +6,7 @@
         <span class="mx-3">Название товара</span>
         <input type="text"
                class="mt-3"
-               formControlName="name"
+               formControlName="title"
                pInputText
         />
       </div>
