--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -5,15 +5,38 @@
     </svg></p>
   </div>
   <div class="d-flex flex-wrap justify-content-around g-5 mt-5">
-    <div *ngIf="!favorites.length; else cartFull">Ждем любимых...</div>
-    <ng-template #cartFull>
-      <div class="card-product mb-2 "
-            *ngFor="let item of favorites">
+    <div *ngIf="!favorites.length; else favorite">Ждем любимых...</div>
+    <ng-template #favorite>
+      <div class="card-product  card m-4  p-2"
+          *ngFor="let item of favorites">
         <div class="card-img d-flex align-items-center">
           <img src="http://localhost:3000/public/{{item.image}}"
-          [alt]="item.title"
-          class="mb-2 card-img-top rounded">
+               [alt]="item.title"
+               class="mb-2 card-img-top rounded">
         </div>
+
+        <h3 class="mb-2 fs-6 text-center card-title title ">{{ item.title }}</h3>
+
+        <div class="text-center">
+          <p> {{ item.description }}</p>
+        </div>
+
+        <div class="text-danger p-1 rounded text-center">Цена: {{ item.price }} руб.</div>
+
+        <div class="d-flex justify-content-center">
+          <button class="py-2 px-3 rounded  btn"
+          (click)="addToCart(item)" [disabled]="isExist(item)"
+          >
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+          </svg>
+          </button>
+        </div>
+
+
+
+
+
       </div>
     </ng-template>
   </div>
